# image-to-webp-converter

./: .dockerignore  .gitignore  Cargo.toml  README.md  convert.bat  convert.sh  docker-compose.yml  go.mod  main.go
docker/: Dockerfile
src/: convert.php  main.rs
