[package]
name = "image-converter"
version = "1.0.0"
edition = "2021"

[dependencies]
image = ">=0.25.0, <0.25.7"
webp = "0.3.1"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
